# EAG-V2

./: .gitignore  README.md
C1_chrome_plugin/: ReadMe.md  background.js  content-script.js  manifest.json  popup.html  popup.js
MCP-Intro/: mcp_client.py  pyproject.toml
MCP-Intro/mcp_assignment_gmail_v2/: Logs2.txt  README.md  functions.py  getCoords.py
MCP-Intro/mcp_assignment_paint_v1/: Logs - v1.txt  README.md  requirements.txt
MCP-Intro/mcp_intro/: example_mcp_server.py  main.py  pyproject.toml
MCP-Intro/mcp_paint/: mcp_server.py  pyproject.toml
Session-5/plugin_code_review_export-2/: CRITERIA_SATISFACTION.md  JSON_DISPLAY_FIX.md  PRODUCTION_IMPROVEMENTS.md  PROMPT_IMPROVEMENTS.md  ReadMe.md  SCRA_SYSTEM_OVERVIEW.md  background.js  manifest.json  (+1 more)
Session-7/S7/: action.py  agent.py  decision.py  example2.py  example3.py  memory.py  models.py  perception.py  pyproject.toml
Session-7/S7/documents/: SAMPLE-Indian-Policies-and-Procedures-January-2023.docx  cricket.txt  dlf.md  markitdown.md
Session-7/S7/faiss_index/: doc_index_cache.json  metadata.json
Session-8/Class/: .gitignore  models.py  pyproject.toml
Session-8/Class/config/: models.json  profiles.yaml
Session-8/Class/core/: loop.py  session.py
Session-8/Class/modules/: decision.py  memory.py
gemini-review-extension/: content-script.js  manifest.json  popup.html  popup.js
plugin_code_review_export/: ReadMe.md  content-script.js  manifest.json  popup.html
youtbe_comment_analyzer/: README.md  background.js  config.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
(+84 files in other folders)
